# deng-test-3

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
job/: bronze.py  gold.py  pipeline.py  schemas.py  silver.py
output/bronze/events/event_date=2025-01-01/: .part-00000-3de04834-a1ea-40ef-92ec-e4026b5aea75.c000.snappy.parquet.crc  part-00000-3de04834-a1ea-40ef-92ec-e4026b5aea75.c000.snappy.parquet
output/bronze/events/event_date=2025-01-02/: .part-00000-3de04834-a1ea-40ef-92ec-e4026b5aea75.c000.snappy.parquet.crc  part-00000-3de04834-a1ea-40ef-92ec-e4026b5aea75.c000.snappy.parquet
output/bronze/quarantined/: .part-00000-cf1d0cef-a085-4bec-b369-15b5285549b3-c000.snappy.parquet.crc  .part-00001-cf1d0cef-a085-4bec-b369-15b5285549b3-c000.snappy.parquet.crc  part-00000-cf1d0cef-a085-4bec-b369-15b5285549b3-c000.snappy.parquet  part-00001-cf1d0cef-a085-4bec-b369-15b5285549b3-c000.snappy.parquet
output/gold/daily_country_metrics/event_date=2025-01-01/: .part-00000-f07a2632-004c-4c53-b305-2542dfc98bed.c000.snappy.parquet.crc  part-00000-f07a2632-004c-4c53-b305-2542dfc98bed.c000.snappy.parquet
output/gold/daily_country_metrics/event_date=2025-01-02/: .part-00000-f07a2632-004c-4c53-b305-2542dfc98bed.c000.snappy.parquet.crc  part-00000-f07a2632-004c-4c53-b305-2542dfc98bed.c000.snappy.parquet
output/silver/events/event_date=2025-01-01/: .part-00000-6213edab-12d5-4e63-b59a-d4002af16db1.c000.snappy.parquet.crc  (+1 more)
testing/: conftest.py  test_bronze.py  test_gold.py  test_pipeline_e2e.py  test_silver.py
(+2 files in other folders)
